Fixed quick view quantity alignment

--- a/sass/woocommerce/_quickview.scss
+++ b/sass/woocommerce/_quickview.scss
@@ -217,7 +217,7 @@ a.product-quick-view-button {
 				.quantity {
 					display: inline-block;
 					float: left;
-					margin: -1px 6px 0 0;
+					margin: 0 6px 0 0;
 
 					input {
 						padding: 5px 6px;
